--- a/metabolights-dao/src/main/resources/log4j.properties
+++ b/metabolights-dao/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 17/10/13 08:48
+# Last modified: 17/10/13 08:50
 # Modified by:   kenneth
 #
 # Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -32,7 +32,7 @@ log4j.appender.ConsoleApp.threshold=ALL
 log4j.appender.FixedFileApp=org.apache.log4j.FileAppender
 log4j.appender.FixedFileApp.layout=org.apache.log4j.PatternLayout
 log4j.appender.FixedFileApp.layout.ConversionPattern=%d {%x} [%-5p] (%C{1},%L): %m%n
-log4j.appender.FixedFileApp.File=${catalina.base}/logs/metabolights_webservice.log
+log4j.appender.FixedFileApp.File=${catalina.base}/logs/metabolights_dao.log
 log4j.appender.FixedFileApp.Append=false
 log4j.appender.FixedFileApp.BufferedIO=false
 log4j.appender.FixedFileApp.BufferSize=1024
