--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>javacsv</artifactId>
             <version>2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.isatools</groupId>
+            <artifactId>SpreadsheetManipulator</artifactId>
+            <version>0.4</version>
+        </dependency>
 
     </dependencies>
 
