--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 17/10/13 10:57
+  ~ Last modified: 23/10/13 13:53
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -14,21 +14,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>uk.ac.ebi.metabolights</groupId>
+    <artifactId>metabolights-dao</artifactId>
+    <name>MetaboLights DAO</name>
+    <description>MetaboLights Data Access Objects module</description>
+    <version>1.1-SNAPSHOT</version>
+
     <parent>
         <artifactId>metabolights-main</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.3</version>
+        <version>1.4</version>
     </parent>
-
-    <groupId>uk.ac.ebi.metabolights</groupId>
-    <artifactId>metabolights-dao</artifactId>
-    <version>1.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>ISAcreator</artifactId>
-            <version>1.7.1</version>
+            <version>1.7.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
