--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 17/10/13 10:55
+  ~ Last modified: 22/10/13 16:18
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -14,14 +14,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>uk.ac.ebi.metabolights</groupId>
+    <artifactId>metabolights-domain</artifactId>
+    <name>MetaboLights Domain</name>
+    <description>MetaboLights Domain module</description>
+    <version>1.3-SNAPSHOT</version>
+
     <parent>
         <artifactId>metabolights-main</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.3</version>
+        <version>1.4</version>
     </parent>
-
-    <groupId>uk.ac.ebi.metabolights</groupId>
-    <artifactId>metabolights-domain</artifactId>
-    <version>1.3-SNAPSHOT</version>
 
 </project>
