--- a/metabolights-utils/metabolights-isatab-utils/pom.xml
+++ b/metabolights-utils/metabolights-isatab-utils/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 10/10/13 15:29
+  ~ Last modified: 22/10/13 16:03
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -14,8 +14,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>isatab-utils</artifactId>
+    <artifactId>metabolights-isatab-utils</artifactId>
     <groupId>uk.ac.ebi.metabolights</groupId>
+    <name>MetaboLights ISAtab Utilities</name>
+    <description>MetaboLights ISAtab Utilities</description>
     <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
