--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 11/10/13 13:21
+  ~ Last modified: 22/10/13 16:04
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -14,15 +14,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>uk.ac.ebi.metabolights</groupId>
+    <artifactId>metabolights-mztab</artifactId>
+    <name>MetaboLights mzTab Imp/Exp</name>
+    <description>MetaboLights MzTab Import and Export</description>
+    <version>2.0-SNAPSHOT</version>
+
     <parent>
         <artifactId>metabolights-utils</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
         <version>1.1-SNAPSHOT</version>
     </parent>
-
-    <groupId>uk.ac.ebi.metabolights</groupId>
-    <artifactId>metabolights-mztab</artifactId>
-    <version>2.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
