--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 10/10/13 15:33
+  ~ Last modified: 22/10/13 16:18
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -14,18 +14,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>uk.ac.ebi.metabolights</groupId>
+    <artifactId>metabolights-utils</artifactId>
+    <name>MetaboLights Utilities</name>
+    <description>MetaboLights Utilities</description>
+    <packaging>pom</packaging>
+    <version>1.1-SNAPSHOT</version>
+
     <parent>
         <artifactId>metabolights-main</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.3</version>
+        <version>1.4</version>
     </parent>
 
-    <groupId>uk.ac.ebi.metabolights</groupId>
-    <artifactId>metabolights-utils</artifactId>
-    <packaging>pom</packaging>
-    <version>1.1-SNAPSHOT</version>
     <modules>
-        <module>isatab-utils</module>
+        <module>metabolights-isatab-utils</module>
         <module>metabolights-mztab</module>
         <module>metabolights-sampledb</module>
     </modules>
