--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -2,7 +2,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 21/10/13 13:46
+  ~ Last modified: 22/10/13 16:44
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -11,20 +11,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>metabolights-main</artifactId>
-        <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.3</version>
-    </parent>
+
     <artifactId>metabolights-webapp</artifactId>
     <version>2.1</version>
     <packaging>war</packaging>
     <name>metabolights-webapp</name>
     <description>MetaboLights Web Application</description>
 
+    <parent>
+        <artifactId>metabolights-main</artifactId>
+        <groupId>uk.ac.ebi.metabolights</groupId>
+        <version>1.4</version>
+    </parent>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <org.spring.version>3.1.0.RELEASE</org.spring.version>
     </properties>
 
     <build>
@@ -342,8 +345,8 @@
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
-            <artifactId>dao</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <artifactId>metabolights-referencelayer-dao</artifactId>
+            <version>0.7-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <artifactId>ojdbc6</artifactId>
@@ -393,9 +396,9 @@
             <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <artifactId>isatab-utils</artifactId>
+            <artifactId>metabolights-isatab-utils</artifactId>
             <groupId>uk.ac.ebi.metabolights</groupId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>javassist</groupId>-->
