--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 26/09/13 14:19
+  ~ Last modified: 22/10/13 16:18
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -12,21 +12,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>uk.ac.ebi.metabolights</groupId>
+    <artifactId>metabolights-webservice</artifactId>
+    <name>metabolights webservice</name>
+    <description>MetaboLights Web Service module</description>
+    <packaging>war</packaging>
+    <version>0.2-SNAPSHOT</version>
+
     <parent>
         <artifactId>metabolights-main</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.3</version>
+        <version>1.4</version>
     </parent>
-
-    <groupId>uk.ac.ebi.metabolights</groupId>
-    <artifactId>metabolights-webservice</artifactId>
-    <packaging>war</packaging>
-    <version>0.2-SNAPSHOT</version>
-    <name>metabolights webservice</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <org.spring.version>3.1.0.RELEASE</org.spring.version>
     </properties>
 
     <dependencies>
