--- a/metabolights-ws-client/pom.xml
+++ b/metabolights-ws-client/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 17/10/13 10:58
+  ~ Last modified: 22/10/13 16:19
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -12,16 +12,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>metabolights-main</artifactId>
-        <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.3</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>metabolights-ws-client</artifactId>
     <groupId>uk.ac.ebi.metabolights</groupId>
+    <name>MetaboLights webservice client</name>
+    <description>MetaboLights WebService Client</description>
     <version>1.1-SNAPSHOT</version>
+
+    <parent>
+        <artifactId>metabolights-main</artifactId>
+        <groupId>uk.ac.ebi.metabolights</groupId>
+        <version>1.4</version>
+    </parent>
 
     <dependencies>
         <dependency>
