--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 12/09/13 11:43
+  ~ Last modified: 22/10/13 16:21
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
   -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.ebi.metabolights</groupId>
   <artifactId>metabolights-main</artifactId>
-  <version>1.3</version>
+  <version>1.4</version>
   <packaging>pom</packaging>
   <name>MetaboLights main project</name>
   <description>MetaboLights Main Project</description>
@@ -22,7 +22,7 @@
      <module>metabolights-dao</module>
      <module>metabolights-webservice</module>
      <module>metabolights-ws-client</module>
-     <module>referencelayer</module>
+     <module>metabolights-referencelayer</module>
      <module>metabolights-webapps</module>
   </modules>
 
@@ -44,10 +44,6 @@
   </build>
 
   <!-- Shared version number properties -->
-  <properties>
-  	<org.spring.version>3.1.0.RELEASE</org.spring.version>
-    <org.apache.commons.lang.version>2.5</org.apache.commons.lang.version>
-  </properties>
 
   <dependencies>
     <!-- dependency>
