--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -400,6 +400,11 @@
             <groupId>uk.ac.ebi.metabolights</groupId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>javassist</groupId>-->
             <!--<artifactId>javassist</artifactId>-->
