Contact changed to "Give us feedback" and feedback form changed as well. (BBR review recommentation)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1588 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -20,13 +20,13 @@
                 "selected": false,
                 "title": "Browse Studies",
                 "href": "browse",
-                "tooltip": "Browse Studies"
+                "tooltip": "Browse all Studies/Experiments"
             },
             {
                 "selected": false,
                 "title": "Browse Compounds",
                 "href": "reference",
-                "tooltip": "Reference layer Compounds (BETA)"
+                "tooltip": "Browse all metabolites"
             },
             {
                 "selected": false,
@@ -48,9 +48,9 @@
             },
             {
                 "selected": false,
-                "title": "Contact",
+                "title": "Give us feedback",
                 "href": "contact",
-                "tooltip": "Contact us"
+                "tooltip": "Please give us feedback"
             }
 
         ],
