New species modules to deal with taxonomies, match taxonomy ids.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1592 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
      <module>metabolights-ws-client</module>
      <module>metabolights-referencelayer</module>
      <module>metabolights-webapps</module>
+     <module>species</module>
   </modules>
 
   <build>
