Species search module Refactoring.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1593 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/species/pom.xml
+++ b/species/pom.xml
@@ -21,6 +21,7 @@
         <module>species-service</module>
         <module>species-model</module>
         <module>species-dao</module>
+        <module>species-search</module>
     </modules>
 
 
