Logging improvements on metabolights-dao and webservice (1 log per day under catalina.base/log) Some minor species search changes.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1596 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -31,6 +31,12 @@
             <groupId>org.isatools</groupId>
             <artifactId>ISAcreator</artifactId>
             <version>1.7.3-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
