--- a/metabolights-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webservice/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,15 @@
         </param-value>
     </context-param>
 
+    <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>/WEB-INF/classes/log4j.properties</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
+
     <!--
       - Loads the root application context of this web app at startup.
       - The application context is then available via
