--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 22/10/13 16:21
+  ~ Last modified: 13/11/13 10:06
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -24,7 +24,7 @@
      <module>metabolights-ws-client</module>
      <module>metabolights-referencelayer</module>
      <module>metabolights-webapps</module>
-     <module>species</module>
+     <module>metabolights-species</module>
   </modules>
 
   <build>
@@ -44,7 +44,6 @@
        </plugins>
   </build>
 
-  <!-- Shared version number properties -->
 
   <dependencies>
     <!-- dependency>
@@ -67,7 +66,6 @@
         <type>jar</type>
         <scope>compile</scope>
     </dependency>
-
  	<dependency>
  		<groupId>log4j</groupId>
  		<artifactId>log4j</artifactId>
@@ -143,4 +141,5 @@
             <url>http://dist.wso2.org/qarepo/</url>
         </repository>
    </repositories>
+
 </project>
