--- a/metabolights-species/pom.xml
+++ b/metabolights-species/pom.xml
@@ -32,6 +32,7 @@
         <module>species-model</module>
         <module>species-dao</module>
         <module>species-search</module>
+        <module>species-core</module>
     </modules>
 
 
