--- a/metabolights-species/species-core/pom.xml
+++ b/metabolights-species/species-core/pom.xml
@@ -3,18 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>species</artifactId>
+        <artifactId>metabolights-species</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uk.ac.ebi.metabolights</groupId>
     <artifactId>species-core</artifactId>
-    <name>species-core</name>
+    <name>MetaboLights Species Core</name>
     <description>Core library for all the species logic and operations</description>
     <packaging>pom</packaging>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2-SNAPSHOT</version>
 
     <dependencies>
 
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>species-model</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
 
 
