--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -2,7 +2,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 13/11/13 10:08
+  ~ Last modified: 13/11/13 14:51
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -15,7 +15,7 @@
     <artifactId>metabolights-webapp</artifactId>
     <version>2.1</version>
     <packaging>war</packaging>
-    <name>metabolights-webapp</name>
+    <name>metabolights Web Application</name>
     <description>MetaboLights Web Application</description>
 
     <parent>
