--- a/metabolights-referencelayer/dao/pom.xml
+++ b/metabolights-referencelayer/dao/pom.xml
@@ -16,7 +16,7 @@
 
     <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
     <artifactId>metabolights-referencelayer-dao</artifactId>
-    <version>0.7-SNAPSHOT</version>
+    <version>0.8-SNAPSHOT</version>
     <name>MetaboLights Reference layer Data Access Object</name>
 
     <parent>
@@ -29,13 +29,18 @@
 	    <dependency>
 	    	<groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
 	    	<artifactId>metabolights-referencelayer-domain</artifactId>
-	    	<version>0.7-SNAPSHOT</version>
+	    	<version>0.8-SNAPSHOT</version>
 	    </dependency>
    		<dependency>
 			<groupId>uk.ac.ebi.biobabel</groupId>
 			<artifactId>biobabel-db</artifactId>
 			<version>1.3.7</version>
 		</dependency>
+        <dependency>
+            <groupId>oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.2</version>
+        </dependency>
         <!--dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
