--- a/metabolights-referencelayer/pom.xml
+++ b/metabolights-referencelayer/pom.xml
@@ -32,6 +32,7 @@
     <modules>
         <module>domain</module>
         <module>dao</module>
+        <module>WorMS-client</module>
     </modules>
 
     <build>
