--- a/metabolights-species/species-core/pom.xml
+++ b/metabolights-species/species-core/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>species-model</artifactId>
             <version>0.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
+            <artifactId>WoRMS-client</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
 
 
     </dependencies>
