Add IPNI parent Searcher (All under plants) Use new ParentSearcher in SpeciesUpdater. New GlobalNames client (has almost all taxonomies we need
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1631 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-referencelayer/pom.xml
+++ b/metabolights-referencelayer/pom.xml
@@ -33,6 +33,7 @@
         <module>domain</module>
         <module>dao</module>
         <module>WorMS-client</module>
+        <module>globalnames</module>
     </modules>
 
     <build>
