--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>jmztab</artifactId>
-            <version>1.0.10-SNAPSHOT</version>
+            <version>2.1.4</version>
             <exclusions>
                 <exclusion>
                     <artifactId>log4j</artifactId>
@@ -75,7 +75,6 @@
             <artifactId>metabolights-dao</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
 
     <build>
