Few pom changes (parent references, removing repos, ...) Importer:  - Update species based on taxon first  - Test OLS client (grrr newt id is without the prefix!!)  - ReferenceLayerImporter: flag to delete species info if true.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1634 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-referencelayer/importer/pom.xml
+++ b/metabolights-referencelayer/importer/pom.xml
@@ -19,8 +19,8 @@
 
     <parent>
         <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
-        <artifactId>referencelayer</artifactId>
-        <version>0.3</version>
+        <artifactId>metabolights-referencelayer</artifactId>
+        <version>0.5</version>
     </parent>
 
 	<build>
@@ -46,6 +46,7 @@
             <artifactId>chebiWS-client</artifactId>
             <version>2.2.1</version>
         </dependency>
+
         <dependency>
             <groupId>uk.ac.ebi.rhea</groupId>
             <artifactId>rhea-ws-client</artifactId>
