--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,12 @@
             <id>oerc</id>
             <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/releases/</url>
         </repository>
-		<repository>
+        <repository>
+            <id>EBI-maven-repo</id>
+            <name>EBI-maven-repo</name>
+            <url>HTTPS://www.ebi.ac.uk/~maven/m2repo</url>
+        </repository>
+        <repository>
 			<id>chebi-repo-snapshot</id>
 			<name>ChEBI Repository</name>
 			<url>http://www.ebi.ac.uk/~biobabel/maven2_repo</url>
