--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 22/10/13 16:04
+  ~ Last modified: 03/12/13 09:57
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -18,7 +18,7 @@
     <artifactId>metabolights-mztab</artifactId>
     <name>MetaboLights mzTab Imp/Exp</name>
     <description>MetaboLights MzTab Import and Export</description>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.1-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-utils</artifactId>
@@ -59,7 +59,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.isatools.plugins.metabolights</groupId>
             <artifactId>metabolomics</artifactId>
             <version>1.7.2-SNAPSHOT</version>
@@ -69,7 +69,7 @@
                     <groupId>org.apache.axis2</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-dao</artifactId>
