Upper case problem refering to WoRMS-client
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1638 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-referencelayer/pom.xml
+++ b/metabolights-referencelayer/pom.xml
@@ -32,7 +32,7 @@
     <modules>
         <module>domain</module>
         <module>dao</module>
-        <module>WorMS-client</module>
+        <module>WoRMS-client</module>
     </modules>
 
     <build>
