--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -98,7 +98,7 @@
     <servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
+        <load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
@@ -117,4 +117,11 @@
         <res-auth>Container</res-auth>
     </resource-ref>
 
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+            <trim-directive-whitespaces>true</trim-directive-whitespaces>
+        </jsp-property-group>
+    </jsp-config>
 </web-app>
