--- a/metabolights-referencelayer/dao/pom.xml
+++ b/metabolights-referencelayer/dao/pom.xml
@@ -16,7 +16,7 @@
 
     <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
     <artifactId>metabolights-referencelayer-dao</artifactId>
-    <version>0.8-SNAPSHOT</version>
+    <version>0.9-SNAPSHOT</version>
     <name>MetaboLights Reference layer Data Access Object</name>
 
     <parent>
@@ -29,7 +29,7 @@
 	    <dependency>
 	    	<groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
 	    	<artifactId>metabolights-referencelayer-domain</artifactId>
-	    	<version>0.8-SNAPSHOT</version>
+	    	<version>0.9-SNAPSHOT</version>
 	    </dependency>
    		<dependency>
 			<groupId>uk.ac.ebi.biobabel</groupId>
@@ -40,6 +40,11 @@
             <groupId>oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.lambdaj</groupId>
+            <artifactId>lambdaj</artifactId>
+            <version>2.3</version>
         </dependency>
         <!--dependency>
             <groupId>mysql</groupId>
