--- a/metabolights-referencelayer/BMLNMRtoMetaboLights/pom.xml
+++ b/metabolights-referencelayer/BMLNMRtoMetaboLights/pom.xml
@@ -20,7 +20,7 @@
 
     <parent>
         <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
-        <artifactId>referencelayer</artifactId>
+        <artifactId>metabolights-referencelayer</artifactId>
         <version>0.5</version>
     </parent>
 
@@ -46,7 +46,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>uk.ac.ebi.metabolights.referencelayer.spectra.nmr.bml.converters.BML2MetabolightsJson</mainClass>
+                            <mainClass>uk.ac.ebi.metabolights.referencelayer.spectra.nmr.bmrb.InputParser</mainClass>
                         </manifest>
                     </archive>
                     <finalName>${project.artifactId}-${project.version}-deps</finalName>
@@ -55,8 +55,10 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                        <phase>package</phase> <!--  bind to the packaging phase -->
+                        <id>make-assembly</id>
+                        <!-- this is used for inheritance merges -->
+                        <phase>package</phase>
+                        <!--  bind to the packaging phase -->
                         <goals>
                             <goal>assembly</goal>
                         </goals>
@@ -95,6 +97,16 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
         </dependency>
     </dependencies>
 </project>
