- Missing spaces in jsp's - Shortened the lines in the taxon browser - Changed the top header to include "browse species"
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1647 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -30,6 +30,12 @@
             },
             {
                 "selected": false,
+                "title": "Browse Species",
+                "href": "species",
+                "tooltip": "Browse all species"
+            },
+            {
+                "selected": false,
                 "title": "Download",
                 "href": "download",
                 "tooltip": "Download"
@@ -42,15 +48,15 @@
             },
             {
                 "selected": false,
-                "title": "About MetaboLights",
-                "href": "about",
-                "tooltip": "About MetaboLights"
-            },
-            {
-                "selected": false,
                 "title": "Give us feedback",
                 "href": "contact",
                 "tooltip": "Please give us feedback"
+            },
+            {
+                "selected": false,
+                "title": "About",
+                "href": "about",
+                "tooltip": "About MetaboLights"
             }
 
         ],
@@ -63,7 +69,7 @@
                 "dataIcon": "l"
             },
             {
-                "title": "Submit",
+                "title": "Submit Study",
                 "href": "presubmit",
                 "tooltip": "Submit data to MetaboLights",
                 "iconFontSet": "icon-functional",
