--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -2,7 +2,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 31/01/14 10:53
+  ~ Last modified: 25/02/14 11:09
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -416,12 +416,17 @@
                     <artifactId>commons-collections</artifactId>
                     <groupId>commons-collections</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>biobabel-citations</artifactId>
+                    <groupId>uk.ac.ebi.biobabel</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
+
 		<dependency>
 			<groupId>uk.ac.ebi.biobabel</groupId>
 			<artifactId>biobabel-citations</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.3</version>
             <exclusions>
                 <exclusion>
                     <artifactId>log4j</artifactId>
