Fix pom dependency in species project Fix: Formula in ref compound wasn't showing ImportFromChebi....import species from ontology parents.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1662 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-species/species-service/pom.xml
+++ b/metabolights-species/species-service/pom.xml
@@ -53,6 +53,11 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>species-model</artifactId>
+            <version>0.2-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
