--- a/metabolights-species/species-dao/pom.xml
+++ b/metabolights-species/species-dao/pom.xml
@@ -27,5 +27,11 @@
         <version>0.2-SNAPSHOT</version>
     </parent>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>species-model</artifactId>
+            <version>0.2-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
