--- a/metabolights-referencelayer/BMLNMRtoMetaboLights/pom.xml
+++ b/metabolights-referencelayer/BMLNMRtoMetaboLights/pom.xml
@@ -108,5 +108,10 @@
             <artifactId>commons-cli</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>bmrb.starlib</groupId>
+            <artifactId>starlib</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
