--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -2,7 +2,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 3/26/14 8:44 AM
+  ~ Last modified: 4/3/14 2:10 PM
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -333,7 +333,7 @@
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>import_layer_MTBLS</artifactId>
-            <version>1.6.5-SNAPSHOT</version>
+            <version>1.6.6-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
             <exclusions>
