--- a/metabolights-species/species-core/pom.xml
+++ b/metabolights-species/species-core/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>WoRMS-client</artifactId>
             <version>0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>globalnames-client</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
 
 
     </dependencies>
