- Checking that new ontologies are used, so was created by ISAcreator 1.7.5+ - Better lastlog reference - 1 year in the future for submitting new studies - Updated to use new import_layer - Default config is the same as the latest
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1700 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+#
+# EBI MetaboLights - http://www.ebi.ac.uk/metabolights
+# Cheminformatics and Metabolism group
+#
+# Last modified: 5/12/14 11:16 AM
+# Modified by:   kenneth
+#
+# Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
+#
+
 mtblAdminEmailAddress=metabolights-help@ebi.ac.uk
 replyTo=no-reply@ebi.ac.uk
 
@@ -8,3 +18,5 @@ isatab.publicReleaseDate=Study Public Release Date
 isatab.studySubDate=Study Submission Date
 isatab.profilingType=Study Assay Measurement Type
 isatab.profilingValue=metabolite profiling
+isatab.newOntologyType=Study Assay Measurement Type Term Accession Number
+isatab.newOntologyValue=http://purl.obolibrary.org/obo/OBI_0000366
