--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 3/27/14 4:04 PM
+  ~ Last modified: 6/6/14 2:55 PM
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -18,7 +18,7 @@
     <artifactId>metabolights-dao</artifactId>
     <name>MetaboLights DAO</name>
     <description>MetaboLights Data Access Objects module</description>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-main</artifactId>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>ISAcreator</artifactId>
-            <version>1.7.3-SNAPSHOT</version>
+            <version>1.7.7</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-domain</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
@@ -63,8 +63,6 @@
             <artifactId>jtstand-sequence</artifactId>
             <version>1.2.1</version>
         </dependency>
-
     </dependencies>
-
 
 </project>
