--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 14/01/14 15:41
+  ~ Last modified: 6/6/14 11:30 AM
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -59,21 +59,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!--dependency>
-            <groupId>org.isatools.plugins.metabolights</groupId>
-            <artifactId>metabolomics</artifactId>
-            <version>1.7.2-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>axis2-transport-http</artifactId>
-                    <groupId>org.apache.axis2</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency-->
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-dao</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
