--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -2,7 +2,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 5/9/14 8:50 AM
+  ~ Last modified: 6/6/14 2:32 PM
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -456,14 +456,14 @@
         </dependency>
         <dependency>
             <artifactId>metabolights-ws-client</artifactId>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <version>1.2-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <artifactId>log4j</artifactId>
                     <groupId>log4j</groupId>
                 </exclusion>
             </exclusions>
-            <groupId>uk.ac.ebi.metabolights</groupId>
-            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <artifactId>metabolights-isatab-utils</artifactId>
