Placeholder for MetaboAnalyst 2.5
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1745 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -36,6 +36,12 @@
             },
             {
                 "selected": false,
+                "title": "Analysis",
+                "href": "analysis",
+                "tooltip": "MetaboAnalyst 2.5"
+            },
+            {
+                "selected": false,
                 "title": "Download",
                 "href": "download",
                 "tooltip": "Download"
