Alternative method to get more than 3000 entities from chebi (POST and export to tsv).
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1761 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-referencelayer/importer/pom.xml
+++ b/metabolights-referencelayer/importer/pom.xml
@@ -73,5 +73,10 @@
             <artifactId>species-core</artifactId>
             <version>0.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.5</version>
+        </dependency>
     </dependencies>
 </project>
