Importer refactor. ProcessReport class to report progress Importmetabolite page added to the webapp jmztab dependency version updated
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1763 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
         <repository>
             <id>EBI-maven-repo</id>
             <name>EBI-maven-repo</name>
-            <url>HTTPS://www.ebi.ac.uk/~maven/m2repo</url>
+            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
         </repository>
         <repository>
 			<id>chebi-repo-snapshot</id>
