--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -399,15 +399,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.rhea</groupId>
-            <artifactId>rhea-ws-domain</artifactId>
-            <version>1.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.rhea</groupId>
-            <artifactId>rhea-ws-client</artifactId>
-            <version>1.0</version>
+		<dependency>
+			<groupId>uk.ac.ebi.rhea</groupId>
+			<artifactId>rhea-ws-domain</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>uk.ac.ebi.rhea</groupId>
+			<artifactId>rhea-ws-client</artifactId>
+			<version>2.0.0</version>
             <exclusions>
                 <exclusion>
                     <artifactId>log4j</artifactId>
@@ -415,10 +415,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.rhea</groupId>
-            <artifactId>rhea-domain</artifactId>
-            <version>1.7.0</version>
+		<dependency>
+			<groupId>uk.ac.ebi.rhea</groupId>
+			<artifactId>rhea-domain</artifactId>
+			<version>1.7.0</version>
             <exclusions>
                 <exclusion>
                     <artifactId>log4j</artifactId>
@@ -435,10 +435,10 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>uk.ac.ebi.biobabel</groupId>
-            <artifactId>biobabel-citations</artifactId>
-            <version>2.0.3</version>
+		<dependency>
+			<groupId>uk.ac.ebi.biobabel</groupId>
+			<artifactId>biobabel-citations</artifactId>
+			<version>2.0.3</version>
             <exclusions>
                 <exclusion>
                     <artifactId>log4j</artifactId>
@@ -512,6 +512,11 @@
             <artifactId>tomcat-jdbc</artifactId>
             <version>7.0.19</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
+            <artifactId>importer</artifactId>
+            <version>0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.rcloud</groupId>
