Tweaks in import metabolites page Add back the old compound page.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1769 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -107,6 +107,27 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>RheaProxy</servlet-name>
+        <servlet-class>uk.ac.ebi.pride.web.util.servlet.proxy.ProxyServlet</servlet-class>
+        <init-param>
+            <param-name>proxyHost</param-name>
+            <param-value>www.ebi.ac.uk</param-value>
+        </init-param>
+        <init-param>
+            <param-name>proxyPort</param-name>
+            <param-value>80</param-value>
+        </init-param>
+        <init-param>
+            <param-name>proxyPath</param-name>
+            <param-value>/rhea/rest/1.0/ws</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RheaProxy</servlet-name>
+        <url-pattern>/ebi/webservices/rhea/rest/1.0/ws/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
